# masca

./: .gitignore  Cargo.toml  README.md  rustfmt.toml
src/: attack.rs  bitboard.rs  board.rs  eval.rs  magics.rs  main.rs  movegen.rs  moves.rs  perft.rs  search.rs  types.rs
