[package]
name = "masca"
version = "0.1.0"
edition = "2024"

[dependencies]

# DEBUG BUILD  (cargo build / cargo run)
[profile.dev]
opt-level = 0
debug = true
overflow-checks = true
lto = "off"
panic = "unwind"
incremental = true
codegen-units = 16
strip = false

# RELEASE BUILD (cargo build --release)
[profile.release]
opt-level = 3
debug = false
overflow-checks = false
lto = "fat"
codegen-units = 1
panic = "abort"
incremental = false
strip = "symbols"

# BENCH BUILD
[profile.bench]
inherits = "release"
debug = true
lto = "thin"
